--- a/OfferCity/Info.plist
+++ b/OfferCity/Info.plist
@@ -77,5 +77,12 @@
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>Esta app usa tu ubicación para mostrarte restaurantes cercanos</string>
 
+<key>LSApplicationQueriesSchemes</key>
+<array>
+    <string>instagram</string>
+    <string>fb</string>
+    <string>twitter</string>
+</array>
+
 </dict>
 </plist>
